# raphlinus.github.io

./: .gitignore  Gemfile  README.md  _config.yml  about.md  categories.html
_figures/: README  clip.py  clip_aos_vs_soa.drawio  grid_robustness.drawio  xilem_view.drawio
_figures/beztoy/: Cargo.toml  README.md  Trunk.toml  index.html
_figures/beztoy/src/: arc.rs  euler.rs  flatten.rs  main.rs
_includes/: social.html
_posts/: 2017-10-03-first-post.markdown  2017-10-12-what-im-working-on.markdown  2018-04-08-smooth-resize.markdown  2018-04-25-gpu-unescaping.markdown  2018-05-05-ecs-ui.markdown  2018-05-10-toward-gpu-json-parsing.markdown  2018-06-23-lost-in-math.markdown  2018-08-17-undefined-behavior.markdown  2018-08-27-a-new-adventure.markdown  2018-09-05-sigmoid.markdown  2018-09-19-synth-update.markdown  2018-10-01-xi-organization.markdown  2018-10-11-2d-graphics.markdown  2018-10-19-fearless-simd.markdown  2018-11-04-small-updates.markdown  2018-12-07-euler-spiral.markdown  2018-12-16-rust-2019.markdown  2018-12-21-new-spline.markdown  2018-12-28-bezier-arclength.markdown  2019-01-04-followups.markdown  2019-01-23-parallel-iir.markdown  2019-02-20-more-small-updates.markdown  2019-02-25-text-layout-kickoff.markdown  2019-03-14-smooth-resize-test.markdown  2019-04-04-font-fallback.md  2019-04-24-skribo-progress.md  2019-05-08-modern-2d.md  2019-05-09-spline-licensing-update.md  2019-08-21-rust-bloat.markdown  2019-10-29-rust-2020.md  2019-11-21-reactive-ui.md  2019-12-23-flatten-quadbez.md  2020-01-17-soundness-pledge.md  2020-02-12-gpu-resources.md  (+35 more)
(+5 files in other folders)
